--- a/app/Greeter.css
+++ b/app/Greeter.css
@@ -2,6 +2,7 @@
     background-color: #eee;
     padding: 10px;
     border: 3px solid #ccc;
+    text-align: center;
 }
 .name{
 	width: 100px;
@@ -10,4 +11,17 @@
 	font-size: 20px;
 	background: #ff4242;
 	color: #fff;
+	line-height: 100px;
+	display: block;
+	margin:20px auto; 
+}
+.my {
+	width: 100px;
+	height: 100px;
+	background: skyblue;
+	margin: 0 auto;
+	color: #fff;
+	text-align: center;
+	line-height: 100px;
+	margin:20px auto; 
 }
